--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-
+<h1>Instrucciones para Abrir App</h1>
+<p>Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D
+</p>
