--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-<h1>Instrucciones para Abrir App</h1>
-<p>Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D
-</p>
+#Instrucciones para Abrir App</h1>
+Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D
