--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-#Instrucciones para Abrir App</h1>
+#Instrucciones para Abrir App
 Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D
