--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-#Instrucciones para Abrir App
-Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D
+# Instrucciones para Abrir App
+
+- Para abrir la app, debes ejecutar el archivo main.py en algún compilador de Python, y ya! :D;
+
+
+
